--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container">
-  <%= react_component('CommentBox', { comments: @comments.to_json }) %> 
+  <%= react_component('CommentBox', { comments: @comments.to_json, url: comments_path }) %> 
 </div>
