--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,4 @@
 <div class="container">
+  <h1>My First React app</h1>
   <%= react_component('CommentBox', { comments: @comments.to_json, url: comments_path }) %> 
 </div>
