Refactoring to put validation in model and initialisation of pusher server side

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <script type="text/javascript">
     I18n.defaultLocale = "<%= I18n.default_locale %>";
     I18n.locale = "<%= I18n.locale %>";
+    window.pusher = new Pusher('<%= Settings.pusher.key %>', { encrypted: true });
   </script>
 </head>
 <body>
