--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,8 @@
 <div class="container">
-  <h1>My First React app</h1>
-  <%= react_component('CommentBox', { comments: @comments.to_json, url: comments_path }) %> 
+  <div class="page-header">
+    <h1>My First React app</h1>
+  </div>
+  <div class="row">
+    <%= react_component('CommentBox', { comments: @comments.to_json, url: comments_path }) %> 
+  </div>
 </div>
