--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="page-header">
-    <h1>My First React app</h1>
+    <h1>Chat Test IO</h1>
   </div>
   <div class="row">
-    <%= react_component('CommentBox', { comments: @comments.to_json, url: comments_path }) %> 
+    <%= react_component('CommentBox', { comments: @comments.to_json }) %> 
   </div>
 </div>
